Add Swagger documentation for createParticipant
